[package]
name = "IcpAccelerator_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

candid = "0.10.4"
candid_derive = "0.6.5"

ic-cdk = "0.12.1"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers

serde_cbor = "0.11"
ic-cdk-macros = "0.8.4"
serde = "1.0.195"
bincode = "1.3.3"
sha2 = "0.9.8"
ic-kit = "0.4.8"
num-traits = "0.2"
candid-extractor = "0.1.2"
ic-stable-structures = "0.6.3"
base64 = "0.13.0"
ic-certified-assets = "0.2.5"
serde_bytes = "0.11.5"
regex = "1.10.6"
once_cell = "1.20.2"

